--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
     margin: 20px 0;
 }
 
-i {
+.banner i {
     margin-left: 20px;
 }
 
@@ -71,12 +71,106 @@ i {
  banner complete 
  ------------------*/
 
+.blog-buttons {
+    height: 312px;
+    width: 312px;
+    background-color: #161616;
+    border-radius: 10px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: 20px;
+}
+
+.blog-button {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 500;
+    background-color: #ffffff;
+}
+
+.active {
+    background-color: #DD0000;
+    color: #ffffff;
+}
+
+.blogs {
+    display: flex;
+    margin-top: 130px;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.card {
+    width: 312px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    /* padding: 10px; */
+    box-sizing: border-box;
+}
+
+.card-image {
+    width: 100%;
+}
+
+.card-info {
+    /* border-bottom: 1px solid gray;
+    border-right: 1px solid gray;
+    border-left: 1px solid gray; */
+    padding: 20px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.card-button {
+    margin-top: 10px;
+}
+
+.card-para {
+    margin-top: 10px;
+}
+
+.card-icon {
+    margin-top: 10px;
+}
+
+.card i {
+    margin-right: 20px;
+}
+
+/*----------------
+ blog complete 
+ ------------------*/
 
 
 
 
-
-/* footer {
+footer {
+    width: 100%;
+    margin-top: 100px;
     color: aliceblue;
+    text-align: center;
     background-color: black;
-} */
+    padding: 100px 0;
+}
+
+footer h1 {
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 50px;
+}
+
+.foot-text {
+    display: flex;
+    color: #B9B9B9;
+    width: 60%;
+    margin: 50px auto;
+    justify-content: space-around;
+}
