--- a/style.css
+++ b/style.css
@@ -75,6 +75,11 @@ a {
  banner complete 
  ------------------*/
 
+.blogs {
+    display: flex;
+    margin-top: 130px;
+}
+
 .blog-buttons {
     height: 312px;
     width: 312px;
@@ -101,10 +106,6 @@ a {
     color: #ffffff;
 }
 
-.blogs {
-    display: flex;
-    margin-top: 130px;
-}
 
 .cards {
     display: grid;
@@ -147,6 +148,17 @@ a {
 
 .card i {
     margin-right: 20px;
+}
+
+#show-more {
+    width: 30%;
+    padding: 20px 40px;
+    margin: 30px auto;
+    background-color: #DD0000;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 500;
+    display: none;
 }
 
 /*----------------
@@ -225,4 +237,127 @@ footer h1 {
 
 .match-card-text {
     margin: 20px 0;
+}
+
+
+
+
+/*----------------
+ media-quarry-tablet
+ ------------------*/
+
+@media screen and (max-width : 992px) and (min-width : 689px) {
+    body {
+        max-width: 100%;
+        margin: 0 auto;
+        border: 1px solid orange;
+    }
+
+    .blogs {
+        flex-direction: column;
+    }
+
+    .blog-buttons {
+        height: 100px;
+        width: 100%;
+        padding: 0;
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: white;
+
+    }
+
+    .blog-button {
+        height: 64px;
+        width: 230px;
+        padding: 0;
+    }
+
+    .cards {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 80px;
+    }
+
+    .match-cards {
+
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px;
+
+    }
+
+    .card:nth-child(8) {
+        display: none;
+    }
+
+    .card:nth-child(9) {
+        display: none;
+    }
+
+    .card:nth-child(7) {
+        display: none;
+    }
+
+    #show-more {
+
+        display: flex;
+    }
+
+
+}
+
+@media screen and (max-width : 688px) {
+    body {
+        max-width: 100%;
+        margin: 0 auto;
+        border: 1px solid orange;
+    }
+
+    .banner {
+        flex-direction: column;
+    }
+
+    #banner-title {
+        font-size: 40px;
+        font-weight: 600;
+        line-height: 40px;
+    }
+
+    #banner-para {
+        display: none;
+    }
+
+
+
+    .half {
+        width: 100%;
+        height: 50%;
+    }
+
+    .blogs {
+        flex-direction: column;
+    }
+
+    .blog-buttons {
+        background-color: white;
+
+    }
+
+
+    .cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .match-cards {
+
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+
+    .foot-text {
+        flex-direction: column;
+        align-items: space-around;
+    }
+
+
 }
